--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://austinpocus.com/"
 languageCode = "en-us"
 title = "ajpocus's notes"
 theme = "ananke"
+googleAnalytics = "G-XGBJNH803N"
 
 [deployment]
 
