--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://austinpocus.com/"
 languageCode = "en-us"
 title = "ajpocus's notes"
-theme = "ananke"
+theme = "eureka"
 googleAnalytics = "UA-185432483-1"
 
 [deployment]
