--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://austinpocus.com/"
+baseURL = "https://blog.austinpocus.com/"
 languageCode = "en-us"
 title = "notes by ajpocus"
 description = "The personal blog of Austin Pocus"
