--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/simpleness"]
 	path = themes/simpleness
-	url = https://github.com/RainerChiang/simpleness.git
+	url = https://github.com/ajpocus/simpleness.git
